force-app/main/default/objects/Insight_Field__c/Insight_Field__c.object-meta.xml
<CustomObject>
    <label>Insight Field</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insight Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>