force-app/main/default/objects/Insight_Field__c/fields/businessType__c.field-meta.xml
<CustomField>
    <fullName>businessType__c</fullName>
    <label>Business Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>