force-app/main/default/objects/Insight_Field__c/fields/Calculated_Insight__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Insight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calculated Insight</label>
    <referenceTo>Calculated_Insight__c</referenceTo>
    <relationshipLabel>Insight Fields</relationshipLabel>
    <relationshipName>Insight_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>