force-app/main/default/objects/Insight_Field__c/fields/displayName__c.field-meta.xml
<CustomField>
    <fullName>displayName__c</fullName>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>