force-app/main/default/objects/Insight_Field__c/fields/field_type__c.field-meta.xml
<CustomField>
    <fullName>field_type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>