force-app/main/default/objects/Insight_Field__c/fields/Insight__c.field-meta.xml
<CustomField>
    <fullName>Insight__c</fullName>
    <externalId>true</externalId>
    <label>Insight</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>