force-app/main/default/objects/Insight_Field__c/fields/Measure_Dimension__c.field-meta.xml
<CustomField>
    <fullName>Measure_Dimension__c</fullName>
    <label>Measure / Dimension</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Measure</fullName>
            </value>
            <value>
                <fullName>Dimension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>