force-app/main/default/objects/Insight_Field__c/fields/Metadata_Creation_Error__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Creation_Error__c</fullName>
    <label>Metadata Creation Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>