force-app/main/default/objects/Insight_Field__c/fields/Metadata_Synched__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Synched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Metadata Synched</label>
    <type>Checkbox</type>
</CustomField>