force-app/main/default/objects/Insight_Field__c/fields/rollupable__c.field-meta.xml
<CustomField>
    <fullName>rollupable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rollupable</label>
    <type>Checkbox</type>
</CustomField>