force-app/main/default/objects/Insight_Field__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>businessType__c</columns>
    <columns>Calculated_Insight__c</columns>
    <columns>Developer_Name__c</columns>
    <columns>displayName__c</columns>
    <columns>Insight__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Measure_Dimension__c</columns>
    <columns>rollupable__c</columns>
    <columns>field_type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>